<resources>
    <string name="app_name">Repair on Demand</string>
    <string name="anfrage_erstellen">Anfrage erstellen</string>
    <string name="eingestellte_aufträge">eingestellte Aufträge</string>
    <string name="aufträge_suche">Aufträge suchen</string>
    <string name="abgegebene_angebote">abgegebene Angebote</string>
    <string name="feedback">Feedback</string>
    <string name="kalender">Kalender</string>
    <string name="benachrichtigungen">Benachrichtigungen</string>
    <string name="service_center">Service-Center</string>
    <string name="benutzername">Benutzername</string>
    <string name="beschreibung_anfrage">Beschreibung</string>
    <string name="stra_e_hausnr_anfrage">Straße, Hausnr.</string>
    <string name="stadt_anfrage">Stadt</string>
    <string name="plz_anfrage">PLZ</string>
    <string name="preisvorstellung_anfrage">Preisvorstellung</string>
    <string name="anfrageTextwidth">145dp</string>
    <string name="anfrageTexthight">43dp</string>
    <string name="reparaturzeitraum_anfrage">Reparaturzeitraum von/bis</string>
    <string name="ablaufdatum_anfrage">Ablaufdatum der Anfrage</string>
    <string name="bitte_ausw_hlen_anfrage">Bitte auswählen</string>
    <string name="impressum"><b>Kontaktinformationen</b> \nRepair on Demand \nMustermann Str.1
        \n76131 Karlsruhe \n\nLicence Number: 10000000 \nUst-ID: LU 26370000 \nVertretungsberechtigter: Hansi \nTel.: +49 (0) 789456123\n\n<b>Support</b>\nSupport finden Sie über den Button <u>Service-Center</u> \nim <u>Home-Menu.</u></string>
    <string name="hinweis_auftrag">Hinweis: Der genaue Standort wird nur angezeigt, \n
    wenn das Angebot angnommen wird.</string>
    <string name="anfang">Anfang</string>
    <string name="ende">Ende</string>
    <string name="ablauf">Ablauf</string>
    <string name="start">Start</string>
    <string-array name="land">
        <item>Land</item>
        <item>Deutschland</item>
        <item>Russland</item>
        <item>Türkei</item>
    </string-array>
    <string-array name="spinnerProfile">
        <item>Profil</item>
        <item>Einstellungen</item>
        <item>Ausloggen</item>
    </string-array>
    <string name="country_prompt">Land</string>
    <string-array name="category">
        <item>Kategorie</item>
        <item>Sanitär</item>
        <item>Dach</item>
    </string-array>
    <string name="category_prompt">Kategorie</string>
    <string name="date_error">Das angegebene Enddatum muss größer als das Anfangsdatum sein.</string>
    <string name="keine_aufträge">Es wurden keine Aufträge gefunden.</string>
    <string name="passwort_frage">Wie kann ich mein Passwort ändern?</string>
    <string name="passwort_antwort">Gehen Sie oben rechts auf Profil und drücken Sie oben rechts auf Passwort ändern.</string>
    <string name="aufträgeEinsehen_frage">Wo kann ich meine Aufträge einsehen?</string>
    <string name="aufträgeEinsehen_antwort">Gehen Sie im Home-Menu auf eingestellte Aufträge.</string>
    <string name="aufträgeAbbrechen_frage">Wie kann ich ein Auftrag abbrechen?</string>
    <string name="aufträgeAbbrechen_antwort">Gehen Sie im Home-Menu auf eingestellte Aufträge.
        Anschließend klicken Sie auf einen Auftrag, den Sie dann über einen Button abbrechen können</string>
    <string name="supportErreichen_frage">Wie kann ich den Support erreichen?</string>
    <string name="supportErreichen_antwort">Gehen Sie im Service_center auf den Button Support.
        Dann werden Ihnen die Kontaktdaten eingeblendet.</string>
    <string name="auftragnehmer_frage">Was kann ich tun, wenn der Auftragnehmer nicht gekommen ist?</string>
    <string name="auftragnehmer_antwort">Nehmen Sie Kontakt mit dem Support auf, der sich darum kümmern wird.</string>
    <string name="zahlung_frage">Wie kann ich eine Zahlungsmöglichkeit auswählen?</string>
    <string name="zahlung_antwort">Nach Auftragsannahme, werden Sie automatisch zu den Zahlungsmöglichkeiten weitergeleitet.
        Ansonsten nehmen Sie Kontakt zu dem Support auf.</string>
    <string name="nutzungsbedingungen">Bitte lesen Sie die Bedingungen aufmerksam durch.\n\n <b>1. Haftungsbeschränkung</b>\n
Die Inhalte des Internetauftritts wurden mit größtmöglicher Sorgfalt und nach bestem Gewissen erstellt. Dennoch übernimmt der Anbieter dieser Webseite keine Gewähr für die Aktualität, Vollständigkeit und Richtigkeit der bereitgestellten Seiten und Inhalte.\n
Als Diensteanbieter ist der Anbieter dieser Webseite gemäß § 7 Abs. 1 TMG für eigene Inhalte und bereitgestellte Informationen auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich; nach den §§ 8 bis 10 TMG jedoch nicht verpflichtet, die übermittelten oder gespeicherten fremden Informationen zu überwachen. Eine Entfernung oder Sperrung dieser Inhalte erfolgt umgehend ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung. Eine Haftung ist erst ab dem Zeitpunkt der Kenntniserlangung möglich.\n\n
        <b>2. Externe Links</b>\n
Die Webseite enthält sog. „externe Links“ (Verlinkungen) zu anderen Webseiten, auf deren Inhalt der Anbieter der Webseite keinen Einfluss hat. Aus diesem Grund kann der Anbieter für diese Inhalte auch keine Gewähr übernehmen.
Für die Inhalte und Richtigkeit der bereitgestellten Informationen ist der jeweilige Anbieter der verlinkten Webseite verantwortlich. Zum Zeitpunkt der Verlinkung waren keine Rechtsverstöße erkennbar. Bei Bekanntwerden einer solchen Rechtsverletzung wird der Link umgehend entfernen.\n\n
        <b>3. Urheberrecht/Leistungsschutzrecht</b>\n
Die auf dieser Webseite veröffentlichten Inhalte, Werke und bereitgestellten Informationen unterliegen dem deutschen Urheberrecht und Leistungsschutzrecht. Jede Art der Vervielfältigung, Bearbeitung, Verbreitung, Einspeicherung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedarf der vorherigen schriftlichen Zustimmung des jeweiligen Rechteinhabers. Das unerlaubte Kopieren/Speichern der bereitgestellten Informationen auf diesen Webseiten ist nicht gestattet und strafbar.\n\n
        <b>4. Datenschutz</b>\n
Durch den Besuch des Internetauftritts können Informationen (Datum, Uhrzeit, aufgerufene Seite) über den Zugriff auf dem Server gespeichert werden. Es werden keine personenbezogenenen (z. B. Name, Anschrift oder E-Mail-Adresse) Daten, gespeichert.\n
Sofern personenbezogene Daten erhoben werden, erfolgt dies, sofern möglich, nur mit dem vorherigen Einverständnis des Nutzers der Webseite. Eine Weitergabe der Daten an Dritte findet ohne ausdrückliche Zustimmung des Nutzers nicht statt.\n
Der Anbieter weist darauf hin, dass die Übertragung von Daten im Internet (z. B. per E-Mail) Sicherheitslücken aufweisen und ein lückenloser Schutz der Daten vor dem Zugriff Dritter nicht gewährleistet werden kann. Der Anbieter übernimmt keine Haftung für die durch solche Sicherheitslücken entstandenen Schäden.\n
Der Verwendung der Kontaktdaten durch Dritte zur gewerblichen Nutzung wird ausdrücklich widersprochen. Es sei denn, der Anbieter hat zuvor seine schriftliche Einwilligung erteilt.\n
Der Anbieter behält sich rechtliche Schritte für den Fall der unverlangten Zusendung von Werbeinformationen, z. B. durch Spam-Mails, vor.</string>
    <string name="support_kontakt"><b>Kontaktieren Sie uns:</b>\n\n\nTelefon: 0789456123\nerreichbar von 08:00 Uhr - 20:00 Uhr (Mo - Fr)\n\nE-Mail: support@repairondemand.de\n\nPostanschrift:\nRepair on Demand\nMustermann Str. 1\n76131 Karlsruhe</string>
</resources>

